# go-hello-static-world

./: BindConfig.txt  CMakeLists.txt  README.md
demo/src/bridge/: bridge.go  bridge.go.in
src/: hello.c  hello.h
src/bridge/: bridge.go.in
src/c/: world.c  world.h
src/hello/: hello.go
